Добавил таблицу для групп товаров, изменил таблицу для товаров

--- a/qr/qr.csproj
+++ b/qr/qr.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
+    <Compile Include="Controllers\ProductGroupsController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -357,6 +358,7 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\ProductGroups\" />
     <Folder Include="Views\Products\" />
   </ItemGroup>
   <PropertyGroup>
