--- a/qr/Web.config
+++ b/qr/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="paymentRequstUrl" value="https://api.fondy.eu/api/checkout/url" />
   </appSettings>
   <connectionStrings>
     <add name="Default" connectionString="Data Source='Localhost';Initial Catalog= QR;Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
@@ -19,9 +20,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Login/SignIn" protection="All" slidingExpiration="false" requireSSL="false" />
     </authentication>
-    <authorization>
-      <deny users="?" />
-    </authorization>
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -39,7 +38,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="DevExtreme.AspNet.Data" publicKeyToken="982f5dab1439d0f7" culture="neutral" />
