--- a/qr/qr.csproj
+++ b/qr/qr.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Products\Product.cshtml" />
     <Content Include="Views\Login\_Register.cshtml" />
     <Content Include="Views\Payment\PaymentForm.cshtml" />
+    <Content Include="Views\About\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -328,6 +329,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\DevExtremeBundleConfig.cs" />
+    <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\FileUploaderController.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
